--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -341,6 +341,9 @@
             <li ng-show="group0">
         		<a ui-sref="dashboard.pythonFile" style="color: #337AB7;"><i class="fa fa-file fa-fw"></i> Python File</a>
             </li>
+            <li ng-show="group0">
+        		<a ui-sref="dashboard.plugin" style="color: #337AB7;"><i class="fa fa-file fa-fw"></i> Plugin</a>
+            </li>
             <li class="divider" ng-show="group0"></li>
         
         	<li ng-show="group0">
