--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -111,7 +111,7 @@
 </style>
     </head>
    
-    <body>
+    <body style="min-width: 1024px;">
 
 	    <div ng-app="sbAdminApp">
 	    	<toaster-container toaster-options="{'close-button': true, 'time-out': 3000, 'animation-class': 'toast-top-center'}"></toaster-container>
