--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -291,7 +291,8 @@
             </li>
             <li class="divider" ng-show="group3"></li>
         	<li ng-show="group2">
-        		<a ui-sref="dashboard.assigntask" style="color: #337AB7;"><i class="fa fa-pencil-square-o fa-fw"></i> จัดการข้อมูลงาน</a>
+        		<!-- <a ui-sref="dashboard.assigntask" style="color: #337AB7;"><i class="fa fa-pencil-square-o fa-fw"></i> จัดการข้อมูลงาน</a> -->
+        		<a ui-sref="dashboard.taskdetail({fromPage: 'assign'})" style="color: #337AB7;"><i class="fa fa-pencil-square-o fa-fw"></i> จัดการข้อมูลงาน</a>
             </li>
             <li class="divider" ng-show="group2"></li>
             <li ng-show="group2">
