--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -266,7 +266,7 @@
     
     
     <li class="dropdown">
-		<a class="dropdown-toggle" data-toggle="dropdown" style="cursor: pointer;" ui-sref="dashboard.home" title="Home">
+		<a class="dropdown-toggle" data-toggle="dropdown" style="cursor: pointer;" ui-sref="dashboard.home" title="หน้าหลัก">
 			<i class="fa fa-home fa-lg"></i>
 		</a>
     </li>
@@ -281,7 +281,7 @@
 		</a>
     </li>
     <li class="dropdown"  ng-show="group0">
-		<a class="dropdown-toggle" data-toggle="dropdown" style="cursor: pointer;" ui-sref="dashboard.notification" title="Notification">
+		<a class="dropdown-toggle" data-toggle="dropdown" style="cursor: pointer;" ui-sref="dashboard.notification" title="แจ้งเตือน">
 			<i class="fa fa-calendar fa-lg"><span class="badge blink_me" style="background-color: #a03b42;">3</span></i>
 		</a>
     </li>
