--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="lib/css/ng-tags-input.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ng-tags-input.bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/colorpicker.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/alertify.css" id="alertifyCSS" type="text/css">
     <!-- <link rel="stylesheet" href="lib/css/bulma.css" type="text/css"> -->
     <!-- endbuild -->
     
@@ -81,6 +82,7 @@
     <script src="lib/ng-tags-input.min.js"></script>
     <script src="lib/bootstrap-colorpicker-module.min.js"></script>
     <script src="lib/jquery.sticky-kit.min.js"></script>
+    <script src="lib/ngAlertify.js"></script>
     
     <script src="i18n/bootstrap-datepicker.th.js"></script>
     <!-- endbower -->
