--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -280,7 +280,7 @@
 			<i class="fa fa-tachometer fa-lg"></i>
 		</a>
     </li>
-    <li class="dropdown"  ng-show="group0">
+    <li class="dropdown" ng-show="group0 || !workingOnProduct.productSetting.isHideAlert">
 		<a class="dropdown-toggle" data-toggle="dropdown" style="cursor: pointer;" ui-sref="dashboard.notification" title="แจ้งเตือน">
 			<i class="fa fa-calendar fa-lg"><span class="badge blink_me" style="background-color: #a03b42;">3</span></i>
 		</a>
