--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -83,6 +83,7 @@
     <script src="lib/bootstrap-colorpicker-module.min.js"></script>
     <script src="lib/jquery.sticky-kit.min.js"></script>
     <script src="lib/ngAlertify.js"></script>
+    <script src="js/jWebSocket.js"></script>
     
     <script src="i18n/bootstrap-datepicker.th.js"></script>
     <!-- endbower -->
