--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -282,7 +282,7 @@
     </li>
     <li class="dropdown" ng-show="group0 || !workingOnProduct.productSetting.isHideAlert">
 		<a class="dropdown-toggle" data-toggle="dropdown" style="cursor: pointer;" ui-sref="dashboard.notification" title="แจ้งเตือน">
-			<i class="fa fa-calendar fa-lg"><span ng-show="alertNum > 0" class="badge blink_me" style="background-color: #a03b42;">{{ alertNum }}</span></i>
+			<i class="fa fa-calendar fa-lg"><span ng-show="alertNum > 0" class="badge blink_me" style="background-color: #a03b42; position: absolute;">{{ alertNum }}</span></i>
 		</a>
     </li>
     
