--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="lib/css/ng-tags-input.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ng-tags-input.bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/colorpicker.min.css" type="text/css">
+    <link rel="stylesheet" href="styles/chatting.css" type="text/css">
     <link rel="stylesheet" href="lib/css/alertify.css" id="alertifyCSS" type="text/css">
     <!-- <link rel="stylesheet" href="lib/css/bulma.css" type="text/css"> -->
     <!-- endbuild -->
