--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -41,6 +41,9 @@
     <div style="position: absolute; right: 35px; top: 58px;" ng-show="photoSource && !(state.current.name == 'dashboard.home')">
 	    <img id="photo" class="img-thumbnail" ng-src="{{ photoSource }}" style="height: 84px;">
     </div>
+    
+	<!-- --- : chatting : ---- -->
+    <!-- <div id="chatbox" ng-include="'./scripts/directives/header/chatting.html'"></div> -->
 		
 	<!-- --- : Footer : ---- -->
 	<div class="container-footer-common">
