--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -58,6 +58,9 @@
 		<div id="search">
 			<input type="text" id="searchfield" value="Search contacts..." />
 		</div>
+		<!-- <div id="hideShowBtn">
+			<button ng-click="mayfender()">|</button>
+		</div> -->
 
 	</div>
 
