--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -43,12 +43,13 @@
     </div>
     
 	<!-- --- : chatting : ---- -->
-    <!-- <div id="chatbox" ng-include="'./scripts/directives/header/chatting.html'"></div> -->
+    <div id="chatbox" ng-include="'./scripts/directives/header/chatting.html'"></div>
 		
 	<!-- --- : Footer : ---- -->
 	<div class="container-footer-common">
 		Copyright © 2017 METACOM Co.,Ltd. All rights reserved.&nbsp;09-4236-3204
 		<span class="pull-right">{{ productKey }}</span>
+		<button class="pull-right" ng-click="mayfender()">Chatting</button>
 	</div>
         
 </nav>
