--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -56,6 +56,7 @@
 		</div>
 
 		<div id="search">
+			&nbsp;&nbsp;&nbsp;<i class="fa fa-search"></i>
 			<input type="text" id="searchfield" value="Search contacts..." />
 		</div>
 		<!-- <div id="hideShowBtn">
