--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -56,12 +56,9 @@
 		</div>
 
 		<div id="search">
-			&nbsp;&nbsp;&nbsp;<i class="fa fa-search"></i>
+			&nbsp;&nbsp;&nbsp;<i class="fa fa-search"></i>&nbsp;
 			<input type="text" id="searchfield" value="Search contacts..." />
 		</div>
-		<!-- <div id="hideShowBtn">
-			<button ng-click="mayfender()">|</button>
-		</div> -->
 
 	</div>
 
