--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -46,7 +46,7 @@
 	<div class="container-footer-common">
 		Copyright © 2017 METACOM Co.,Ltd. All rights reserved.&nbsp;09-4236-3204
 		<div class="pull-right">
-			<i class="fa fa-weixin fw" ng-click="mayfender()" style="cursor: pointer;" title="Chatting"></i>&nbsp;&nbsp;&nbsp;
+			<i class="fa fa-weixin fw" ng-click="mayfender()" style="cursor: pointer;" title="Chatting"></i>&nbsp;
 			<span>{{ productKey }}</span>
 		</div>
 		<div id="chatbox" ng-include="'./scripts/directives/header/chatting.html'"></div>
