--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -1,7 +1,8 @@
 <div id="friendslist">
 	<div id="topmenu">
-		<span class="friends"></span> <span class="chats"></span> <span
-			class="history"></span>
+		<span class="friends"><i class="fa fa-weixin fa-2x" style="color: #62819c;"></i></span> 
+		<span class="chats"><i class="fa fa-user fa-2x"></i></span>
+		<span class="history"><i class="fa fa-users fa-2x"></i></span>
 	</div>
 
 	<div id="friends">
