--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -1,8 +1,9 @@
 <div id="friendslist">
 	<div id="topmenu">
-		<span class="chats"><i class="fa fa-weixin fa-2x" style="color: #62819c;" ng-click="testCnTab(1)"></i></span> 
-		<span class="friends"><i class="fa fa-user fa-2x" ng-click="testCnTab(2)"></i></span>
-		<span class="group"><i class="fa fa-users fa-2x" ng-click="testCnTab(3)"></i></span>
+		<span class="chats"><i class="fa fa-weixin fa-2x" ng-style="tab == 1 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="testCnTab(1)"></i></span> 
+		<span class="friends"><i class="fa fa-user fa-2x" ng-style="tab == 2 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="testCnTab(2)"></i></span>
+		<span class="group"><i class="fa fa-users fa-2x" ng-style="tab == 3 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="testCnTab(3)"></i></span>
+		<hr ng-style="tab == 1 ? {left: '0px'} : tab == 2 ? {left: '100px'} : {left: '200px'}" />
 	</div>
 
 	<div id="friends">
