--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -1,69 +1,27 @@
 <div id="friendslist">
 	<div id="topmenu">
-		<span class="chats"><i class="fa fa-weixin fa-2x" ng-style="tab == 1 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="tab = 1"></i></span> 
-		<span class="friends"><i class="fa fa-user fa-2x" ng-style="tab == 2 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="tab = 2"></i></span>
-		<span class="group"><i class="fa fa-users fa-2x" ng-style="tab == 3 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="tab = 3"></i></span>
+		<span class="chats"><i class="fa fa-weixin fa-2x" ng-style="tab == 1 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="changeTab(1)"></i></span> 
+		<span class="friends"><i class="fa fa-user fa-2x" ng-style="tab == 2 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="changeTab(2)"></i></span>
+		<span class="group"><i class="fa fa-users fa-2x" ng-style="tab == 3 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="changeTab(3)"></i></span>
 		<hr ng-style="tab == 1 ? {left: '0px'} : tab == 2 ? {left: '100px'} : {left: '200px'}" />
 	</div>
 
 	<div id="friends">
-		<div class="friend">
-			<img
-				src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1_copy.jpg" />
-			<p>
-				<strong>akachai</strong><br />
-				<span>เอกชัย สองสิง</span>
-			</p>
-			<div class="status available"></div>
+		<div class="friend-box">
+			<div class="friend" ng-repeat="item in items" ng-click="goChat($event, item)">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1_copy.jpg" />
+				<p>
+					<strong>{{ item.name }}</strong><br />
+					<span>{{ tab == 1 ? item.msg : item.fullName }}</span>
+				</p>
+				<div class="status" ng-class="{'inactive': item.status == 0}"></div>
+			</div>
 		</div>
-
-		<div class="friend">
-			<img
-				src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/2_copy.jpg" />
-			<p>
-				<strong>Duangporn</strong><br />
-				<span>ดวงพร</span>
-			</p>
-			<div class="status away"></div>
+		<div id="search">&nbsp;&nbsp;&nbsp;
+			<i class="fa fa-search"></i>&nbsp;
+			<input type="text" id="searchfield" placeholder="ค้นหา..." />
 		</div>
-
-		<div class="friend">
-			<img
-				src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/3_copy.jpg" />
-			<p>
-				<strong>Jompon</strong><br />
-				<span>จอมพล ไกลกลาง</span>
-			</p>
-			<div class="status inactive"></div>
-		</div>
-
-		<div class="friend">
-			<img
-				src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/4_copy.jpg" />
-			<p>
-				<strong>Krung</strong><br />
-				<span>กรุงไทย มีผล</span>
-			</p>
-			<div class="status inactive"></div>
-		</div>
-
-		<div class="friend">
-			<img
-				src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/5_copy.jpg" />
-			<p>
-				<strong>Wannapha</strong><br />
-				<span>วรรณภา มัสมัน</span>
-			</p>
-			<div class="status inactive"></div>
-		</div>
-
-		<div id="search">
-			&nbsp;&nbsp;&nbsp;<i class="fa fa-search"></i>&nbsp;
-			<input type="text" id="searchfield" value="Search contacts..." />
-		</div>
-
 	</div>
-
 </div>
 
 <div id="chatview" class="p1">
@@ -133,8 +91,10 @@
 	</div>
 
 	<div id="sendmessage">
-		<input type="text" value="Send message..." />
-		<button id="send"></button>
+		<textarea rows="3" cols="30" style="resize: none;" placeholder="พิมพ์ข้อความ"></textarea>
+		<button id="send" title="ส่ง">
+			<i class="fa fa-paper-plane fa-2x"></i>
+		</button>
 	</div>
 
 </div>
