--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -49,7 +49,7 @@
 			<i class="fa fa-weixin fw" ng-click="isShow = isShow ? false:true" style="cursor: pointer;" title="Chatting"></i>&nbsp;
 			<span>{{ productKey }}</span>
 		</div>
-		<div id="chatbox" ng-include="'./scripts/directives/header/chatting.html'" ng-style="isShow ? {height: '500px'} : {height: '0px'}" onload="readyChatting()"></div>
+		<div id="chatbox" ng-include="'./scripts/directives/header/chatting.html'" ng-style="isShow ? {height: '559px'} : {height: '0px'}"></div>
 	</div>
         
 </nav>
