--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -1,14 +1,14 @@
 <div id="friendslist">
 	<div id="topmenu">
-		<hr class="minz" title="ซ่อน" ng-click="$parent.isShow = false" />
-		<span class="chats"><i class="fa fa-weixin fa-2x" ng-style="tab == 1 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="changeTab(1)"></i></span> 
-		<span class="friends"><i class="fa fa-user fa-2x" ng-style="tab == 2 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="changeTab(2)"></i></span>
-		<span class="group"><i class="fa fa-users fa-2x" ng-style="tab == 3 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="changeTab(3)"></i></span>
-		<hr class="indicator" ng-style="tab == 1 ? {left: '0px'} : tab == 2 ? {left: '100px'} : {left: '200px'}" />
+		<hr class="minz" title="ซ่อน" ng-click="chatting.isShow = false" />
+		<span class="chats"><i class="fa fa-weixin fa-2x" ng-style="chatting.tab == 1 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="chatting.changeTab(1)"></i></span> 
+		<span class="friends"><i class="fa fa-user fa-2x" ng-style="chatting.tab == 2 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="chatting.changeTab(2)"></i></span>
+		<span class="group"><i class="fa fa-users fa-2x" ng-style="chatting.tab == 3 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="chatting.changeTab(3)"></i></span>
+		<hr class="indicator" ng-style="chatting.tab == 1 ? {left: '0px'} : chatting.tab == 2 ? {left: '100px'} : {left: '200px'}" />
 	</div>
 	<div id="friends">
 		<div class="friend-box">
-			<div class="friend" ng-repeat="item in items" ng-click="goChat($event, item)">
+			<div class="friend" ng-repeat="item in chatting.items" ng-click="chatting.goChat($event, item)">
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1_copy.jpg" />
 				<p>
 					<strong>{{ item.name }}</strong><br />
@@ -25,7 +25,7 @@
 </div>
 <div id="chatview" class="p1">
 	<div id="profile">
-		<hr class="minz" title="ซ่อน" ng-click="$parent.isShow = false" ng-style="isChatPage ? {background: '#e6e6e6'} : {}" />
+		<hr class="minz" title="ซ่อน" ng-click="chatting.isShow = false" ng-style="chatting.isChatPage ? {background: '#e6e6e6'} : {}" />
 		<div id="close">
 			<div class="cy"></div>
 			<div class="cx"></div>
@@ -36,7 +36,7 @@
 	</div>
 	<div id="chat-messages">
 		<label>Thursday 02</label>
-		<div class="message" ng-repeat="msg in messages" ng-class="{'right': msg.isMe}">
+		<div class="message" ng-repeat="msg in chatting.messages" ng-class="{'right': msg.isMe}">
 			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1_copy.jpg" ng-hide="msg.isMe" />
 			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/2_copy.jpg" ng-show="msg.isMe" />
 			<div class="bubble">
@@ -45,8 +45,8 @@
 		</div>
 	</div>
 	<div id="sendmessage">
-		<textarea rows="3" cols="30" style="resize: none;" placeholder="พิมพ์ข้อความ..." ng-model="chatMsg" ng-keydown="chkEnter($event)"></textarea>
-		<button id="send" title="ส่ง" ng-click="sendMsg()">
+		<textarea id="inputMsg" rows="3" cols="30" style="resize: none;" placeholder="พิมพ์ข้อความ..." ng-model="chatting.chatMsg" ng-keydown="chatting.chkEnter($event)"></textarea>
+		<button id="send" title="ส่ง" ng-click="chatting.sendMsg()">
 			<i class="fa fa-paper-plane fa-2x"></i>
 		</button>
 	</div>
