--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -83,8 +83,8 @@
     <script src="lib/ng-tags-input.min.js"></script>
     <script src="lib/bootstrap-colorpicker-module.min.js"></script>
     <script src="lib/jquery.sticky-kit.min.js"></script>
-    <script src="lib/ngAlertify.js"></script>
-    <script src="lib/ng-infinite-scroll.min.js"></script>
+    <script src="lib/ngAlertify.js"></script>    
+    <script src="lib/ui-scroll.min.js"></script>
     <script src="js/jWebSocket.js"></script>
     
     <script src="i18n/bootstrap-datepicker.th.js"></script>
