--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -37,10 +37,9 @@
 	<div id="chat-messages">
 		<label>Thursday 02</label>
 		<div class="message" ng-repeat="msg in chatting.messages" ng-class="{'right': msg.isMe}">
-			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1_copy.jpg" ng-hide="msg.isMe" />
-			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/2_copy.jpg" ng-show="msg.isMe" />
+			<img data-ng-src="data:image/png;base64,{{chatting.mapImg[msg.author].imgContent}}" ng-hide="msg.isMe" />
 			<div class="bubble">
-				<span class="msg">{{ msg.msg }}<span class="time">{{ msg.msgTime }}</span></span>
+				<span class="msg">{{ msg.body }}<span class="time">{{ msg.createdDateTime | date:'HH:mm' }}</span></span>
 			</div>
 		</div>
 	</div>
