--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -14,7 +14,7 @@
 						<strong>{{ item.showname }}</strong><br />
 						<span>{{ chatting.tab == 1 ? item.lastMsg : (item.firstName + ' ' + item.lastName) }}</span>
 					</p>
-					<div class="status" ng-class="{'inactive': (!item.status || item.status == 0)}">
+					<div ng-show="chatting.tab == 1" class="status" ng-class="{'inactive': (!item.status || item.status == 0)}">
 						<span class="badge un-read">{{ item.unRead }}</span>
 					</div>
 			</div>
