--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -9,7 +9,8 @@
 	<div id="friends">
 		<div class="friend-box" ui-scroll-viewport>
 			<div class="friend" ui-scroll="item in chatting.friendSource" adapter="chatting.adapter" ng-click="chatting.goChat($event, item)" buffer-size="15" start-index="0">
-				 <img data-ng-src="data:image/png;base64,{{item.imgData.imgContent}}" />
+				 <img data-ng-src="data:image/png;base64,{{item.imgData.imgContent}}" ng-hide="item.isGroup" />
+				 <img src="/backend/app/images/group.jpg" ng-show="item.isGroup" />
 					<p>
 						<strong>{{ item.showname }}</strong><br />
 						<span>{{ chatting.tab == 1 ? item.lastMsg : (item.firstName + ' ' + item.lastName) }}</span>
@@ -41,7 +42,7 @@
 			<label ng-show="msg.dateLabel">{{ msg.dateLabel }}</label>
 			<img data-ng-src="data:image/png;base64,{{chatting.mapImg[msg.author].imgContent}}" ng-hide="msg.isMe" />
 			<div class="bubble">
-				<span class="msg">{{ msg.body }}<span class="time">{{ (msg.isMe && msg.readCount > 0) ? 'อ่านแล้ว'+(chatting.isGroup ? ' '+msg.readCount+'#' : '') +'':'' }} {{ msg.createdDateTime | date:'HH:mm' }}</span></span>
+				<span class="msg">{{ msg.body }}<span class="time">{{ (msg.isMe && msg.readCount > 0) ? 'อ่านแล้ว'+(chatting.isGroup ? ' '+msg.readCount : '') +'':'' }} {{ msg.createdDateTime | date:'HH:mm' }}</span></span>
 			</div>
 		</div>
 	</div>
