--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -43,7 +43,7 @@
     </div>
     	
 	<!-- --- : Footer : ---- -->
-	<div class="container-footer-common" ng-init="chatting.tab = 1; chatting.isShow = true;">
+	<div class="container-footer-common" ng-init="chatting.tab = 1; chatting.isShow = false;">
 		Copyright © 2017 METACOM Co.,Ltd. All rights reserved.&nbsp;09-4236-3204
 		<div class="pull-right">
 			<i class="fa fa-weixin fw" ng-class="{'blink_me': chatting.isChatBlink}" ng-click="chatting.isShow = chatting.isShow ? false:true; chatting.isChatBlink = false;" style="cursor: pointer;" title="Chatting"></i>&nbsp;
