--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -36,8 +36,9 @@
     <link rel="stylesheet" href="lib/css/ng-tags-input.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ng-tags-input.bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/colorpicker.min.css" type="text/css">
-    <link rel="stylesheet" href="styles/chatting.css" type="text/css">
     <link rel="stylesheet" href="lib/css/alertify.css" id="alertifyCSS" type="text/css">
+    <link rel="stylesheet" href="lib/css/angular-confirm.min.css" type="text/css">
+    <link rel="stylesheet" href="styles/chatting.css" type="text/css">
     <!-- <link rel="stylesheet" href="lib/css/bulma.css" type="text/css"> -->
     <!-- endbuild -->
     
@@ -85,6 +86,7 @@
     <script src="lib/jquery.sticky-kit.min.js"></script>
     <script src="lib/ngAlertify.js"></script>    
     <script src="lib/ui-scroll.min.js"></script>
+    <script src="lib/angular-confirm.min.js"></script>
     <script src="js/jWebSocket.js"></script>
     
     <script src="i18n/bootstrap-datepicker.th.js"></script>
