--- a/backend/src/main/webapp/app/scripts/directives/header/chatting.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/chatting.html
@@ -1,6 +1,6 @@
 <div id="friendslist">
 	<div id="topmenu">
-		<hr class="minz" title="ซ่อน" ng-click="chatting.isShow = false" />
+		<hr class="minz" title="ซ่อน" ng-click="chatting.chatHide()" />
 		<span class="chats"><i class="fa fa-weixin fa-2x" ng-style="chatting.tab == 1 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="chatting.changeTab(1)"></i></span> 
 		<span class="friends"><i class="fa fa-user fa-2x" ng-style="chatting.tab == 2 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="chatting.changeTab(2)"></i></span>
 		<span class="group"><i class="fa fa-users fa-2x" ng-style="chatting.tab == 3 ? {color: '#62819c', cursor: 'default'} : {}" ng-click="chatting.changeTab(3)"></i></span>
@@ -28,7 +28,7 @@
 </div>
 <div id="chatview" class="p1">
 	<div id="profile">
-		<hr class="minz" title="ซ่อน" ng-click="chatting.isShow = false" ng-style="chatting.isChatPage ? {background: '#e6e6e6'} : {}" />
+		<hr class="minz" title="ซ่อน" ng-click="chatting.chatHide()" ng-style="chatting.isChatPage ? {background: '#e6e6e6'} : {}" />
 		<div id="close">
 			<div class="cy"></div>
 			<div class="cx"></div>
