--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -44,7 +44,7 @@
     	
 	<!-- --- : Footer : ---- -->
 	<div class="container-footer-common" ng-init="chatting.tab = 1; chatting.isShow = false;">
-		Copyright © 2017 METACOM Co.,Ltd. All rights reserved.&nbsp;09-4236-3204
+		Copyright © 2017-2018 METACOM Co.,Ltd. All rights reserved.&nbsp;09-4236-3204
 		<div class="pull-right">
 			<i class="fa fa-weixin fw" ng-class="{'blink_me': chatting.isChatBlink}" ng-style="chatting.isChatBlink ? {color: 'rgb(206, 100, 51)'} : {}" ng-click="chatting.chatHide()" style="cursor: pointer;" title="IM"></i>&nbsp;
 			<span>{{ productKey }}</span>
