Add KYS Payment Alert

--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -85,6 +85,7 @@
     <script src="lib/jquery.sticky-kit.min.js"></script>
     <script src="lib/ui-scroll.min.js"></script>
     <script src="lib/angular-confirm.min.js"></script>
+    <script src="lib/notify.min.js"></script>
     <script src="js/jWebSocket.js"></script>
     
     <script src="i18n/bootstrap-datepicker.th.js"></script>
