--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>DMS</title>
+    <title>Debt Management System</title>
     <meta name="description" content="">
     <meta name="unauthorized" content="true">
     <meta name="viewport" content="width=device-width">
@@ -112,7 +112,7 @@
 }
 
 #loading-bar-spinner {
-	top: 30px;
+	top: 60px;
 }
 </style>
     </head>
