--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -112,7 +112,10 @@
 }
 
 #loading-bar-spinner {
-	top: 60px;
+	/* top: 60px; */
+}
+#loading-bar-spinner .fa-spinner {
+	color: white;
 }
 </style>
     </head>
