--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -7,7 +7,7 @@
         	border-radius: 10px 0px 10px 0px; background-color: #337ab7;
         	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);">
         	
-	        <label style="line-height: 0;">DMS</label><br/>
+	        <label style="line-height: 0;" title="Debt Management System">DMS</label><br/>
 	        <small style="font-size: 10px;">Version {{ backendVersion }}</small>
         </div>
     </div>
