--- a/backend/src/main/webapp/app/manual.html
+++ b/backend/src/main/webapp/app/manual.html
@@ -64,10 +64,11 @@
 }
 
 #loading-bar-spinner {
-	/* top: 60px; */
+	top: 3px; 
+	left: 2px;
 }
 #loading-bar-spinner .fa-spinner {
-	color: white;
+	color: #337ab7;
 }
 </style>
     </head>
