--- a/backend/src/main/webapp/app/scripts/directives/sidebar2/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar2/sidebar.html
@@ -2,25 +2,25 @@
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav in" id="side-menu">
             <li ui-sref-active="active">
-                <a ui-sref="manual.grid"><i class="fa fa-twitter fa-fw"></i> ส่วนประกอบต่างๆ</a>
+                <a ui-sref="manual.overview"><i class="fa fa-twitter fa-fw"></i> ส่วนประกอบต่างๆ</a>
             </li>
             <li ng-class="{active: collapseVar==1}">
                 <a href="" ng-click="check(1)"><i class="fa fa-child fa-fw"></i> Collector<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" collapse="collapseVar!=1">
                     <li ui-sref-active="active">
-                        <a ui-sref="manual.icons">Dashboard</a>
+                        <a ui-sref="manual.grid">&nbsp&nbspDashboard</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="manual.typography"> แจ้งเตือน</a>
+                        <a ui-sref="manual.typography">&nbsp&nbspแจ้งเตือน</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="manual.notifications"> ข้อมูลงาน</a>
+                        <a ui-sref="manual.notifications">&nbsp&nbspข้อมูลงาน</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="manual.buttons"> ผลการติดตาม</a>
+                        <a ui-sref="manual.buttons">&nbsp&nbspผลการติดตาม</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="manual.panels-wells"> ผลประมาณการ</a>
+                        <a ui-sref="manual.panels-wells">&nbsp&nbspผลประมาณการ</a>
                     </li>
                 </ul>
             </li>
