--- a/backend/src/main/webapp/app/scripts/directives/sidebar2/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar2/sidebar.html
@@ -2,7 +2,7 @@
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav in" id="side-menu">
             <li ui-sref-active="active">
-                <a ui-sref="manual.overview"><i class="fa fa-twitter fa-fw"></i> ส่วนประกอบต่างๆ</a>
+                <a ui-sref="manual.overview"><i class="fa fa-twitter fa-fw"></i> Overview</a>
             </li>
             <li ng-class="{active: collapseVar==1}">
                 <a href="" ng-click="check(1)"><i class="fa fa-child fa-fw"></i> Collector<span class="fa arrow"></span></a>
@@ -63,9 +63,6 @@
                         <a ui-sref="manual.icons"> ผลประมาณการ</a>
                     </li>
                 </ul>
-            </li>
-            <li ui-sref-active="active">
-                <a ui-sref="manual.form"><i class="fa fa-twitter fa-fw"></i> ส่วนประกอบต่างๆ</a>
             </li>
         </ul>
     </div>
