--- a/backend/src/main/webapp/app/scripts/directives/sidebar2/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar2/sidebar.html
@@ -8,7 +8,10 @@
                 <a href="" ng-click="check(1)"><i class="fa fa-child fa-fw"></i> Collector<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" collapse="collapseVar!=1">
                     <li ui-sref-active="active">
-                        <a ui-sref="manual.grid">&nbsp&nbspDashboard</a>
+                        <a ui-sref="manual.contactUs">&nbsp&nbspContact Us</a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="manual.dashboard">&nbsp&nbspDashboard</a>
                     </li>
                     <li ui-sref-active="active">
                         <a ui-sref="manual.typography">&nbsp&nbspแจ้งเตือน</a>
