--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -338,12 +338,12 @@
         	<li ng-if="group0">
         		<a ui-sref="dashboard.deployerFile" style="color: #337AB7;"><i class="fa fa-file fa-fw"></i> Deployer File</a>
             </li>
-        	<li ng-if="group0" ng-if="group0">
+        	<!-- <li ng-if="group0" ng-if="group0">
         		<a ui-sref="dashboard.tunnelFile" style="color: #337AB7;"><i class="fa fa-file fa-fw"></i> Tunnel File</a>
             </li>
             <li ng-if="group0">
         		<a ui-sref="dashboard.pythonFile" style="color: #337AB7;"><i class="fa fa-file fa-fw"></i> Python File</a>
-            </li>
+            </li> -->
             <li ng-if="group0">
         		<a ui-sref="dashboard.plugin" style="color: #337AB7;"><i class="fa fa-file fa-fw"></i> Plugin</a>
             </li>
